--- a/bank/static/css/project.css
+++ b/bank/static/css/project.css
@@ -1,1 +1,26 @@
 /* Project specific css */
+
+.keyboard {
+    padding: 0px;
+    margin: 0px 0px 10px 0px;
+}
+
+.keyboard li {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: 1px solid red;
+    text-align: center;
+    line-height: 35px;
+    box-shadow: 2px 2px black;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+#display {
+    height: 40px;
+    font: 35px/40px black Tahoma;
+    margin: 10px 0;
+    border: 2px solid black;
+    width: 440px;
+}
