--- a/bank/templates/terminal/operations.html
+++ b/bank/templates/terminal/operations.html
@@ -3,12 +3,9 @@
 {% block content %}
 
 <h1>Operations</h1>
-<form action="{% url 'terminal:logout' %}" method="POST">
-  {% csrf_token %}
-  <input type="submit" value="Logout">
-</form>
 
 <a href="{% url 'terminal:withdraw' %}"><button>Withdraw Money</button></a>
 <a href="{% url 'terminal:balance' %}"><button>Show balance</button></a>
+{% include 'terminal/_logout.html' %}
 
 {% endblock content %}
