--- a/bank/templates/terminal/pin.html
+++ b/bank/templates/terminal/pin.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block content %}
 
-<form method="POST" action="">
-{% csrf_token %}
-{{ form }}
-<input type="submit" value="Submit">
-</form>
+<h1>Enter pin code</h1>
+
+{% include "terminal/_keyboard.html" with display='pin' %}
+
+<a href="/"><button>Exit</button></a>
 
 {% endblock content %}
+
+{% block javascript %}
+{{ block.super }}
+    <script src="{% static 'js/project.js' %}"></script>
+{% endblock javascript %}
