--- a/bank/templates/terminal/withdraw.html
+++ b/bank/templates/terminal/withdraw.html
@@ -1,11 +1,18 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block content %}
 
-<form action="{% url 'terminal:withdraw' %}" method="POST">
-  {% csrf_token %}
-  {{ form }}
-  <input type="submit" value="Ok">
-</form>
+<h1>Withdraw money</h1>
+
+
+{% include "terminal/_keyboard.html" with display='withdraw' %}
+
+{% include 'terminal/_logout.html' %}
 
 {% endblock content %}
+
+{% block javascript %}
+{{ block.super }}
+    <script src="{% static 'js/project.js' %}"></script>
+{% endblock javascript %}
